fix migrations users field role
